damage mode fix, projectile related update, block throwing power update